# tg-gpt-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml
bot/: config.py  main.py
bot/application/: use_cases.py
bot/core/: logger.py
bot/domain/: entities.py  interfaces.py
bot/infrastructure/llm/: deepseek_provider.py
bot/infrastructure/storage/: memory_storage.py
bot/infrastructure/telegram/: bot.py  handlers.py  registration.py  utils.py
